--- a/InstaStay/Areas/HotelManager/Views/ManageHotel/Index.cshtml
+++ b/InstaStay/Areas/HotelManager/Views/ManageHotel/Index.cshtml
@@ -34,7 +34,7 @@
                 </a>
             </li>
             <li class="nav-item mb-2">
-                <a href="/HotelManager/Bookings" class="nav-link text-light sidebar-link">
+                <a href="/HotelManager/Bookings/Index?UserName=@User.Identity.Name" class="nav-link text-light sidebar-link">
                     <i class="fas fa-calendar-check me-2"></i> Bookings
                 </a>
             </li>
