--- a/InstaStay/Areas/HotelManager/Views/ManageHotel/Index.cshtml
+++ b/InstaStay/Areas/HotelManager/Views/ManageHotel/Index.cshtml
@@ -19,7 +19,7 @@
         <h4 class="mb-4 text-info">Hotel Manager</h4>
         <ul class="nav flex-column">
             <li class="nav-item mb-2">
-                <a href="/HotelManager/Dashboard" class="nav-link text-light sidebar-link">
+                <a href="/HotelManager/ManageHotel/Index" class="nav-link text-light sidebar-link">
                     <i class="fas fa-home me-2"></i> Dashboard
                 </a>
             </li>
@@ -38,11 +38,6 @@
                     <i class="fas fa-calendar-check me-2"></i> Bookings
                 </a>
             </li>
-            <li class="nav-item mb-2">
-                <a href="/HotelManager/Guests" class="nav-link text-light sidebar-link">
-                    <i class="fas fa-user-friends me-2"></i> Guests
-                </a>
-            </li>
             <li class="nav-item">
                 <a href="/HotelManager/Coupon/index" class="nav-link text-light sidebar-link">
                     <i class="fa-solid fa-ticket me-2"></i> Coupons
@@ -54,19 +49,19 @@
         <h2 class="mb-4">Welcome, @User.Identity.Name</h2>
         <div class="row mb-4">
             <div class="col-md-4">
-                <div class="card shadow-sm p-3">
+                <div class="card shadow-sm p-3 bg-info">
                     <h5>Total Bookings</h5>
                     <p class="fs-4">@Model.TotalBookings</p>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card shadow-sm p-3">
+                <div class="card shadow-sm p-3 bg-success">
                     <h5>Checked-in Guests</h5>
                     <p class="fs-4">@Model.CheckedInGuests</p>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card shadow-sm p-3">
+                <div class="card shadow-sm p-3 bg-warning">
                     <h5>Pending Requests</h5>
                     <p class="fs-4">@Model.PendingRequests</p>
                 </div>
