--- a/InstaStay/Views/Shared/_Layout.cshtml
+++ b/InstaStay/Views/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
                             </li>
 
                             <li class="nav-item position-relative">
-                                <a class="nav-link active" asp-controller="Chat" asp-action="Index">
+                                <a class="nav-link active" asp-controller="Chat" asp-action="Index" asp-area="Customer">
                                     <i class="fas fa-envelope"></i>
                                     @if (ViewBag.UnreadMessages > 0)
                                     {
@@ -121,7 +121,7 @@
                         }
                     </ul>
                     <div class="dropdown">
-                        <button class="btn btn-outline-info bg-gradient theme-icon light-theme ms-1" type="button" id="themeDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn btn-outline-info bg-gradient theme-icon ms-1" type="button" id="themeDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fas fa-lightbulb"></i>
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="themeDropdown">
@@ -151,8 +151,9 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/toastr.Js/toastr.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>''
     <script type="module" src="~/js/site.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
