--- a/InstaStay/Areas/Customer/Views/Home/Index.cshtml
+++ b/InstaStay/Areas/Customer/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
         </script>
     }
 }
-<div class="search-banner bg-warning mt-1 ms-5 d-flex align-items-center justify-content-center p-5 position-relative"
+<div class="search-banner bg-warning mt-1 d-flex align-items-center justify-content-center p-5 position-relative"
      style="background-image: url('~/images/HotelImages/06ecd7d2-4f4b-4a8d-b500-2ef1cd657496.jpg'); background-size: cover; background-position: center; border-radius: 20px; box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);">
     <div class="position-absolute top-0 start-0 w-100 h-100" style="background-color: rgba(0, 0, 0, 0.6); border-radius: 20px;"></div>
     <div class="text-center text-light position-relative">
@@ -35,7 +35,7 @@
         </a>
     </div>
 </div>
-<div class="container ms-4 mt-5">
+<div class="container mt-5">
     <form id="searchForm" method="get" asp-action="Search" class="bg-opacity-25 bg-info text-black shadow-sm p-4 rounded-4">
         <div class="row g-4">
             <div class="col-md-4">
