--- a/InstaStay/Areas/Customer/Views/Booking/MyBookings.cshtml
+++ b/InstaStay/Areas/Customer/Views/Booking/MyBookings.cshtml
@@ -5,7 +5,7 @@
 }
 <h1 class="text-center mb-4 mt-3 fw-bold text-primary">🛒 My Bookings</h1>
 
-<div class="container animate-hover m-4">
+<div class="container animate-hover">
     <div class="table-responsive shadow-lg p-3 mb-4 bg-white rounded">
         <table class="table table-hover table-bordered text-center align-middle">
             <thead class="table-dark">
