--- a/InstaStay/Areas/Customer/Views/BrowseHotel/RoomDetails.cshtml
+++ b/InstaStay/Areas/Customer/Views/BrowseHotel/RoomDetails.cshtml
@@ -1,10 +1,9 @@
 ﻿@model Models.Models.Room
-
 @{
     ViewData["Title"] = "Room Details";
     var RoomImagesList = Model.RoomImages ?? new List<RoomImages>();
 }
-<div class="container m-5">
+<div class="container ">
     <div class="card shadow-lg rounded-4 border-0">
         <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center rounded-top-4">
             <h2 class="mb-0"><i class="fas fa-bed me-2"></i>Room Details</h2>
